--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -40,9 +40,14 @@
     <%= form.label :other %>
     <%= form.text_field :other, class:"form-control" %>
   </div>
+  <div class="field form-group">
+    <%= form.number_field :user_id, 
+        id: :contact_user_id, 
+        class:"form-control", value: current_user.id, type: :hidden %>
+  </div>
   <br/>
   <div class="actions">
-    <%= form.submit class:"btn btn-outline-dark" %>
+    <%= form.submit class:"btn btn-dark" %>
   </div>
   
 <% end %>
