--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -45,7 +45,7 @@
 
 
 <br/>
-
+<%= link_to "Back Home", :back, class: 'btn btn-outline-dark' %>
 <br/>
 <br/>
 
@@ -60,5 +60,3 @@
 </div>
 <br/>
 
-
-<%= link_to "Back", :back %>
